--- a/html-reporter.hbs
+++ b/html-reporter.hbs
@@ -20,7 +20,7 @@
         border-left: 1px black solid;
         border-bottom: 1px black solid;
         border-right: none;
-      }
+      } 
       td.pass { color: #003b07; background: #86e191; }
       td.skip { color: #7d3a00; background: #ffd24a; }
       td.fail { color: #5e0e00; background: #ff9c8a; }
@@ -92,7 +92,7 @@
               {{this.message}}
 
               {{#if this.failure}}
-                {{this.failure}}
+               <!--  {{this.failure}} -->
               {{/if}}
 
               {{#if this.stacktrace}}
